--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ color: #c0c0c0;
 .navbar{
 	font-size: 15px;
 	padding-left: 20px;
+	background-color: #20c997;
 }
 .navbar-light .navbar-brand{
 	color: #17a2b8;
